Inject host scripts, wrap API calls

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -25,5 +25,11 @@
   ],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["injectable/cs2inventory.js"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
