--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,15 +4,15 @@
   "version": "0.0.1",
   "description": "Load your CS2 Steam inventory and share it with various websites",
   "action": {
-    "default_icon": "./assets/icon-512.jpg"
+    "default_icon": "./assets/icon-512.png"
   },
   "background": {
     "service_worker": "./scripts/background-worker.js"
   },
   "icons": {
-    "16": "./assets/icon-512.jpg",
-    "48": "./assets/icon-512.jpg",
-    "128": "./assets/icon-512.jpg"
+    "16": "./assets/icon-512.png",
+    "48": "./assets/icon-512.png",
+    "128": "./assets/icon-512.png"
   },
   "permissions": [
     "webRequest"
