feat: support for persisted content script injection user granted

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "CS2 Inventory Loader",
-  "version": "0.0.1",
+  "version": "0.0.69",
   "description": "Load your CS2 Steam inventory and share it with various websites",
   "action": {
     "default_icon": "./assets/icon-512.png"
@@ -23,13 +23,20 @@
     "https://steamcommunity.com/inventory/*/730/2",
     "https://cs2inventory.dev/*"
   ],
+  "optional_host_permissions": [
+    "https://*/*"
+  ],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
   },
   "web_accessible_resources": [
     {
-      "resources": ["injectable/cs2inventory.js"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "injectable/cs2inventory.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ]
 }
