--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "cs2-inventory-extension",
   "version": "0.0.1",
+  "scripts": {
+    "lint": "eslint ."
+  },
   "devDependencies": {
-    "@types/firefox-webext-browser": "^120.0.3"
+    "@types/firefox-webext-browser": "^120.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
