--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 .vscode
 .idea
+
+# dependencies
 node_modules
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+.plasmo
+
+# local env files
+.env*
+
+out/
+build/
+dist/
+
+# typescript
+.tsbuildinfo
