--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "plasmo dev",
     "build": "plasmo build",
     "package": "plasmo package",
-    "lint": "eslint ."
+    "lint": "eslint ./src --ext .ts -c .eslintrc"
   },
   "dependencies": {
     "plasmo": "0.85.2",
@@ -20,6 +20,7 @@
     "@types/firefox-webext-browser": "^120.0.3",
     "@types/node": "20.11.5",
     "@types/webextension-polyfill": "^0.10.7",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
