--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ./src --ext .ts -c .eslintrc"
   },
   "dependencies": {
+    "@plasmohq/messaging": "^0.6.2",
     "plasmo": "0.85.2",
     "webextension-polyfill": "^0.10.0"
   },
