--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "lint": "eslint ./src --ext .ts -c .eslintrc"
   },
   "dependencies": {
-    "@plasmohq/messaging": "^0.6.2",
     "plasmo": "0.85.2",
-    "webextension-polyfill": "^0.10.0"
+    "ufo": "^1.5.3"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
