--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "plasmo": "0.85.2",
-    "webextension-polyfill": "^0.10.0"
+    "ufo": "^1.5.3"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
